fixed changelog version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nagios-plugins-check-smart-attributes (1.2-1) unstable; urgency=low
+nagios-plugins-check-smart-attributes (1.2) unstable; urgency=low
 
   * Initial release
 
